--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
+    "pubsub-js": "^1.5.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
