--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery": "^3.1.1",
     "pubsub-js": "^1.5.4",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
